--- a/package.json
+++ b/package.json
@@ -1,38 +1,28 @@
 {
-  "name": "react_demo",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "server-app",
+    "version": "0.1.0",
+    "private": true,
+    "description": "Collabora Online Integration Example",
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
+        "debug": "~2.6.9",
+        "express": "~4.16.1",
+        "morgan": "~1.9.1",
+        "xmldom": "^0.5.0",
+        "xpath": "0.0.32"
+    },
+    "bugs": {
+        "url": "https://github.com/CollaboraOnline/collabora-online-sdk-examples/issues"
+    },
+    "homepage": "https://github.com/CollaboraOnline/collabora-online-sdk-examples/webapp/reacts",
+    "license": "Apache",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/CollaboraOnline/collabora-online-sdk-examples.git"
+    }
 }
